force-app/main/default/objects/Sansan_CI__BizCard_FieldMapping__c/Sansan_CI__BizCard_FieldMapping__c.object-meta.xml
<CustomObject>
    <label>名刺マッピング</label>
    <nameField>
        <displayFormat>CIM-{000000}</displayFormat>
        <label>MappingNo</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>