force-app/main/default/objects/Sansan_CI__BizCard_FieldMapping__c/fields/Sansan_CI__IsActiveInsert__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__IsActiveInsert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>登録時有効</label>
    <type>Checkbox</type>
</CustomField>