force-app/main/default/objects/Sansan_CI__BizCard_FieldMapping__c/fields/Sansan_CI__IsActiveUpdate__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__IsActiveUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>更新時有効</label>
    <type>Checkbox</type>
</CustomField>