force-app/main/default/objects/Sansan_CI__BizCard_FieldMapping__c/fields/Sansan_CI__IsAddressSummary__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__IsAddressSummary__c</fullName>
    <defaultValue>false</defaultValue>
    <label>住所連結</label>
    <type>Checkbox</type>
</CustomField>