force-app/main/default/objects/Sansan_CI__BizCard_FieldMapping__c/fields/Sansan_CI__IsDispAllField__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__IsDispAllField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>全項目表示</label>
    <type>Checkbox</type>
</CustomField>