force-app/main/default/objects/Sansan_CI__BizCard_FieldMapping__c/fields/Sansan_CI__IsDispInsertOnly__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__IsDispInsertOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>登録のみ表示</label>
    <type>Checkbox</type>
</CustomField>