force-app/main/default/objects/Sansan_CI__BizCard_FieldMapping__c/fields/Sansan_CI__IsDisplayConfirmInsert__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__IsDisplayConfirmInsert__c</fullName>
    <formula>!Sansan_CI__IsSystemField__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>確認画面表示_新規</label>
    <type>Checkbox</type>
</CustomField>