force-app/main/default/objects/Sansan_CI__BizCard_FieldMapping__c/fields/Sansan_CI__IsOverwriteWithBlank__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__IsOverwriteWithBlank__c</fullName>
    <defaultValue>false</defaultValue>
    <label>名刺の値空欄時更新</label>
    <type>Checkbox</type>
</CustomField>