force-app/main/default/objects/Sansan_CI__BizCard_FieldMapping__c/fields/Sansan_CI__IsSystemField__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__IsSystemField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>システム項目</label>
    <type>Checkbox</type>
</CustomField>