force-app/main/default/objects/Sansan_CI__BizCard_FieldMapping__c/fields/Sansan_CI__TransferField__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__TransferField__c</fullName>
    <label>引継先項目</label>
    <length>255</length>
    <type>Text</type>
</CustomField>