force-app/main/default/objects/Sansan_CI__BizCard_FieldMapping__c/fields/Sansan_CI__TransferObject__c.field-meta.xml
<CustomField>
    <fullName>Sansan_CI__TransferObject__c</fullName>
    <label>引継先</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Lead</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>